--- a/templates/home/invite.html
+++ b/templates/home/invite.html
@@ -29,13 +29,15 @@
                 <div class="row">
                 <!--Grid column-->
                 <div class="col-md-9 mb-md-0 mb-5 mx-auto">
-                    <form autocomplete="off" id="quiz-form" name="quiz-form" method="POST" action="{% url "quiz" quiz_id=quiz.id %}">
-                        {% csrf_token %}
-                        {{ form }}
-                        <div class="text-center text-md-left mt-3">
-                          <button type="button" class="btn btn-primary" onclick="this.disabled=true,this.form.submit();">Submit Your Answers</button>
-                        </div>
+                  {%  if form %}
+                    <form autocomplete="on" id="invite-form" name="invite-form" method="POST" action="{% url "invite" quiz_id=quiz.id %}">
+                      {% csrf_token %}
+                      {{ form }}
+                      <div class="text-center text-md-left mt-3">
+                        <button type="button" class="btn btn-primary" onclick="this.disabled=true,this.form.submit();">Generate QR Codes</button>
+                      </div>
                     </form>
+                  {% endif %}
                 </div>
           </section>
         </div>
@@ -44,11 +46,6 @@
 
     <noscript>Sorry, your browser does not support JavaScript!</noscript>
 
-    <script>
-      window.addEventListener("pageshow", () => {
-        document.getElementById("quiz-form").reset();               
-      });
-    </script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
