Added export all answers feature

--- a/templates/home/success.html
+++ b/templates/home/success.html
@@ -20,7 +20,7 @@
         <!--Section: Result-->
         <section class="mb-4">
           <h2 class="h1-responsive font-weight-bold text-center my-4">{{result}} !</h2>
-          <h1 class="h1-responsive font-weight-bold text-center my-4">Your Score is <strong>{{score}}</strong></h1>
+          <h1 class="h1-responsive font-weight-bold text-center my-4">Your Score is <strong>{{score}}</strong> of <strong>{{total}}</strong> </h1>
           <p class="text-center w-responsive mx-auto mb-5">“To be, or not to be: that is the question.”</p>
         </section>
     </div>
