--- a/templates/base.html
+++ b/templates/base.html
@@ -12,15 +12,17 @@
     <title>CIgen</title>
   {% endif %}
 
-  <meta content="CIgen" name="description">
-  <meta content="CIgen" name="keywords">
+  <meta content="CIgen is an open-source quizzing software to create and deliver online quizzes, exams, and tests." name="description">
+  <meta content="CIgen,quiz maker software" name="keywords">
 
   <!-- Favicons -->
   <link href="{% static 'img/favicon.png' %}" rel="icon">
   <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
+  {% comment %}
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"> -->
+  {% endcomment %}
 
   <!-- Vendor CSS Files -->
   <link href="{% static 'assets/vendor/animate.css/animate.min.css' %}" rel="stylesheet">
