Added countdown timer

--- a/templates/base.html
+++ b/templates/base.html
@@ -90,7 +90,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="{% url 'admin:index' %}" class="get-started-btn">Get Started</a>
+      <a href="{% url 'admin:index' %}" class="get-started-btn">Teacher Login</a>
 
     </div>
   </header><!-- End Header -->
@@ -107,9 +107,8 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>CIgen</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
+              A108 Somewhare Street <br>
+              Cairo, Egypt <br><br>
               <strong>Phone:</strong> +1 5589 55488 55<br>
               <strong>Email:</strong> info@example.com<br>
             </p>
@@ -131,9 +130,9 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Data Science</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">DevOps</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Machine Learning</a></li>
             </ul>
           </div>
 
@@ -163,7 +162,8 @@
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/mentor-free-education-bootstrap-theme/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+          <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
+          Made by <a href="https://github.com/Muhammad-Elgendi">Muhammad Elgendi</a> 
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
