--- a/templates/home/quiz.html
+++ b/templates/home/quiz.html
@@ -2,6 +2,9 @@
 
 {% block head %}
 <style>
+  .errorlist{
+    color:#d93025;
+  }
   .unselectable {
     -webkit-user-select: none;
     -webkit-touch-callout: none;
@@ -10,29 +13,74 @@
     user-select: none;
     color: #444444;
   }
+
+  {%  if time %}
+
+  /* countdown timer */
+  #countdown-timer {
+  }
+  #countdown-timer label {
+    clear: both;  
+    font-size:0.4em;
+    color:#000;
+  }
+  #countdown-timer span {
+    background-color: transparent;
+    color: #5fcf80;
+    font-size: 2em;
+    font-weight: normal;
+    text-align: center;
+    width: 33%;
+    display: block;
+    float: left;
+    border-right:1px solid #ccc;
+    padding-left:2%;
+  }
+  #countdown-timer span:last-child {
+    border-right:none;
+  }
+    
+  @media (max-width:1199px) {
+    #countdown-timer label {
+      display:block;
+    }
+  }
+
+  {% endif %}
+
 </style>
 {% endblock %}
 
 {% block content %}
 
   <!--Section: Quiz -->
-  <section class="mb-5">
+  <section class="my-5">
     <div class="container">
 
     <!--Section heading-->
     <h2 class="h1-responsive font-weight-bold text-center my-4">{{quiz.name}}</h2>
     <!--Section description-->
     <p class="text-center w-responsive mx-auto mb-5">“To be, or not to be: that is the question.”</p>
-      <div class="row">
+
+    <!-- <section class="before-quiz d-flex justify-content-center align-items-center">
+      <div class="before-quiz container position-relative" data-aos="zoom-in" data-aos-delay="100">
+        <h2>Ready to take your quiz? </h2>
+        <a href="#" onclick="startQuiz()" class="get-started-btn mx-0">Start Quiz</a>
+      </div>
+    </section> -->
+
+    <div class="row">
       <!--Grid column-->
-      <div class="col-md-9 mb-md-0 mb-5 mx-auto">
-          <div style="color: #d93025;" class="mb-3">*Required</div>
-          <form autocomplete="off" oncopy="return false" oncut="return false" onpaste="return false" onmousedown="return false" onselectstart="return false" id="quiz-form" class="unselectable" name="quiz-form" method="POST" action="{% url "home:quiz" quiz_id=quiz.id %}">
+      <!-- style="display: None;" -->
+      <div class="col-md-9 mb-md-0 mb-5 mx-auto" id="quiz-container">
+          <div style="color: #d93025;" class="mb-3">* Required</div> 
+          <!-- onmousedown="return false" onselectstart="return false" -->
+          <form autocomplete="off" oncopy="return false" oncut="return false" onpaste="return false" id="quiz-form" class="unselectable" name="quiz-form" method="POST" action="{% url "home:quiz" quiz_id=quiz.id %}">
               {% csrf_token %}
               {{ form }}
               <input type="hidden" name="seed" id="seed" value="{{seed}}">
               <div class="text-center text-md-left mt-3">
-                <button id="quizsubmitbtn" type="button" class="get-started-btn" onclick="this.disabled=true,this.form.submit();">Submit Your Answers</button>
+                <button id="quizsubmitbtn" type="button" class="get-started-btn" onclick="this.disabled=true,this.form.checkValidity(),this.form.submit();">Submit Your Answers</button>
               </div>
           </form>
       </div>
@@ -67,7 +115,7 @@
         You can't submit your answers for the quiz because you left three times.
       </div>
       <div class="modal-footer">
-        <button type="button" class="get-started-btn" onclick="window.location.reload();">Retake Quiz</button>
+        <a class="get-started-btn" href="{% url 'home:quiz' quiz.id %}">Retake Quiz</a>
       </div>
     </div>
   </div>
@@ -81,8 +129,99 @@
   <noscript>Sorry, your browser does not support JavaScript!</noscript>
 
   <script>
-    // show images
 
+    // scroll to form error if any
+    {% if form.is_bound %}
+
+      function scrollToTargetAdjusted(selector){
+        var element = document.querySelector(selector);
+        var headerOffset = 150;
+        var elementPosition = element.getBoundingClientRect().top;
+        var offsetPosition = elementPosition + window.pageYOffset - headerOffset;
+      
+        window.scrollTo({
+            top: offsetPosition,
+            behavior: "smooth"
+        });
+      }
+
+      document.addEventListener("DOMContentLoaded", function () {
+        // document.querySelector(".errorlist").scrollIntoView({ behavior: 'smooth', block: 'start' });
+        scrollToTargetAdjusted(".errorlist");
+      });
+
+    {% endif %}
+
+    // start and show quiz
+    function startQuiz(){
+      // document.querySelectorAll('.before-quiz').forEach(function(element) {
+      //   // Now do something with my element
+      //   element.remove();
+      // });
+      // document.getElementById("quiz-container").style.display = "block"; 
+      // show countdown timer
+      document.getElementById("countdown-timer").style.display = "block"; 
+      document.querySelector("#header div:nth-child(2)").innerHTML = '';
+
+      {%  if time %}
+      updateTimer();      
+      {% endif %}
+      
+      // update start time
+      // document.querySelector("#id_start").value = new Date().toISOString();
+    }
+
+  {%  if time %}
+
+    // show countdown timer
+    document.querySelector("#header").insertAdjacentHTML('afterbegin',
+      ' <div id="countdown-timer" style="display: None;"></div>');
+
+    function updateTimer(){
+      // update timer
+      // set the date we're counting down to
+      var target_date = new Date(new Date(document.querySelector("#id_start").value).getTime() + {{ time }}*60000).getTime();
+      
+      // variables for time units
+      var days, hours, minutes, seconds;
+        
+      // get tag element
+      var countdown = document.getElementById('countdown-timer');
+        
+      // update the tag with id "countdown" every 1 second
+      setInterval(function () {
+        
+          // find the amount of "seconds" between now and target
+          var current_date = new Date().getTime();
+          var seconds_left = (target_date - current_date) / 1000;
+        
+          // do some time calculations
+          days = parseInt(seconds_left / 86400);
+          seconds_left = seconds_left % 86400;
+            
+          hours = parseInt(seconds_left / 3600);
+          seconds_left = seconds_left % 3600;
+            
+          minutes = parseInt(seconds_left / 60);
+          seconds = parseInt(seconds_left % 60);
+            
+          // format countdown string + set tag value
+        
+          // to add days, uncomment next line  
+          // <span class="days">' + days +  ' <label>Days</label></span>      
+          countdown.innerHTML = '<span class="hours">' + hours + ' <label>Hours</label></span><span class="minutes">'
+          + minutes + ' <label>Minutes</label></span>'+
+        ' <span class="seconds">' + seconds + ' <label>Seconds</label></span>';  
+        
+      }, 1000);
+
+    }
+    
+  startQuiz();
+
+  {% endif %}
+
+    // show images
     {% for question_num, img in images.items %}
       if (document.querySelector("[for='id_q{{ question_num }}_0']") !== null){
         document.querySelector("[for='id_q{{ question_num }}_0']").insertAdjacentHTML('beforebegin',
@@ -102,7 +241,7 @@
       console.log("Pageshow reset");
       document.getElementById("quiz-form").reset();
       // this changes the scrolling behavior to "smooth"
-      window.scrollTo({ top: 0, behavior: 'smooth' });
+      // window.scrollTo({ top: 0, behavior: 'smooth' });
     });
 
     let leave_count = 0;    
@@ -138,11 +277,11 @@
           }) 
           console.log("Creating modal...");
           myModal.show()
-        }       
-      
-
+        }  
       }
     };
+
+
   </script>
 
 {% endblock %}
