Fixed automatic scoring

--- a/templates/home/quiz.html
+++ b/templates/home/quiz.html
@@ -5,6 +5,9 @@
   .errorlist{
     color:#d93025;
   }
+  ul{
+    list-style-type: none;
+  }
   .unselectable {
     -webkit-user-select: none;
     -webkit-touch-callout: none;
