Fixed left-components after cheating detection

--- a/templates/home/quiz.html
+++ b/templates/home/quiz.html
@@ -263,7 +263,7 @@
           document.getElementById('exampleModal').remove();
 
           // remove old quiz
-          document.getElementById('quiz-form').remove();          
+          document.getElementById('quiz-container').remove();          
           
           // show non-closed
           var cheatingModal = new bootstrap.Modal(document.getElementById('staticBackdrop'), {
