--- a/templates/base.html
+++ b/templates/base.html
@@ -163,7 +163,7 @@
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/mentor-free-education-bootstrap-theme/ -->
           <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
-          Made by <a href="https://github.com/Muhammad-Elgendi">Muhammad Elgendi</a> 
+          Developed by <a href="https://github.com/Muhammad-Elgendi">Muhammad Elgendi</a> 
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
