--- a/templates/home/quiz.html
+++ b/templates/home/quiz.html
@@ -115,7 +115,7 @@
         <h5 class="modal-title" style="color:#d93025;" id="staticBackdropLabel">You can't submit your answers!</h5>
       </div>
       <div class="modal-body" id="staticBackdropBody">
-        You can't submit your answers for the quiz because you left three times.
+        You can't submit your answers because you left the quiz.
       </div>
       <div class="modal-footer">
         <a class="get-started-btn" href="{% url 'home:quiz' quiz.id %}">Retake Quiz</a>
@@ -174,6 +174,41 @@
       // document.querySelector("#id_start").value = new Date().toISOString();
     }
 
+    function actionOnCheating(){
+      document.getElementById("quiz-form").reset();  
+      document.getElementById("quizsubmitbtn").disabled=true; 
+      
+      // destroy old modal
+      document.getElementById('exampleModal').remove();
+
+      // remove quiz
+      document.getElementById('quiz-container').remove();          
+      
+      // show non-closed
+      var cheatingModal = new bootstrap.Modal(document.getElementById('staticBackdrop'), {
+        keyboard: false
+      }) 
+      cheatingModal.show()
+    }
+
+    // handle inactivity case
+  var inactivityTime = function () {
+    var time;
+
+    function resetTimer() {
+      clearTimeout(time);
+      time = setTimeout(actionOnCheating, 45*1000);
+      // 1000 milliseconds = 1 second
+    }
+
+    window.addEventListener('load', resetTimer, true);
+    var events = ['mousedown', 'mousemove', 'keypress', 'scroll', 'touchstart'];
+      events.forEach(function(name) {
+      window.addEventListener(name, resetTimer, true);
+    });
+
+  };
+
   {%  if time %}
 
     // show countdown timer
@@ -220,7 +255,6 @@
 
     }
     
-  startQuiz();
 
   {% endif %}
 
@@ -245,6 +279,9 @@
       document.getElementById("quiz-form").reset();
       // this changes the scrolling behavior to "smooth"
       // window.scrollTo({ top: 0, behavior: 'smooth' });
+      startQuiz();
+      inactivityTime();
+
     });
 
     let leave_count = 0;    
@@ -256,21 +293,7 @@
         leave_count += 1;
         if(leave_count >= 3){
           // cheating case
-          document.getElementById("quiz-form").reset();  
-          document.getElementById("quizsubmitbtn").disabled=true; 
-          
-          // destroy old modal
-          document.getElementById('exampleModal').remove();
-
-          // remove old quiz
-          document.getElementById('quiz-container').remove();          
-          
-          // show non-closed
-          var cheatingModal = new bootstrap.Modal(document.getElementById('staticBackdrop'), {
-            keyboard: false
-          }) 
-          console.log("Cheating detected.");
-          cheatingModal.show()
+          actionOnCheating();
         }
         document.getElementById("exampleModalLabel").innerText ="You have left the quiz for "+leave_count+" time(s).";
  
@@ -282,7 +305,7 @@
           myModal.show()
         }  
       }
-    };
+    };  
 
 
   </script>
